--- a/settings.json
+++ b/settings.json
@@ -9,7 +9,7 @@
 {
   "vim_mode": true,
   "ui_font_size": 18,
-  "buffer_font_size": 19,
+  "buffer_font_size": 17,
   "buffer_font_family": "Hack Nerd Font",
   "relative_line_numbers": true,
   "buffer_font_weight": 500,
@@ -31,11 +31,10 @@
     "show": "never"
   },
   "cursor_blink": false,
-  "cursor_shape": "block",
   "theme": {
     "mode": "system",
     "light": "One Light",
-    "dark": "Gruvbox Dark Hard"
+    "dark": "Graphene"
   },
   "inlay_hints": {
     "enabled": false,
